ADDED: Complete launch pipeline, handle legacy launches, handle modified jars (needing potential access widening)